--- a/Long2short/Long2short.csproj
+++ b/Long2short/Long2short.csproj
@@ -46,6 +46,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="MongoDB.Bson, Version=2.4.4.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MongoDB.Bson.2.4.4\lib\net45\MongoDB.Bson.dll</HintPath>
@@ -71,7 +74,7 @@
   <ItemGroup>
     <Compile Include="Base62Class.cs" />
     <Compile Include="MongoClass.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Long2ShortMainEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
